# MD2DB

./: .dockerignore  .env.example  .gitignore  API_TESTING.md  Cargo.toml  DOCKER.md  Dockerfile  LATEX_EXTRACTION_IMPROVEMENTS.md  PERFORMANCE.md  PERFORMANCE_TESTING_SUMMARY.md  PROGRESS.md  README.md  SQL_INJECTION_PROTECTION_README.md  demo.py  demo_sql_injection.py  docker-compose.yml  example_exam.md  requirements.txt  setup.py  test_api.sh  test_latex_extraction.py
benches/: parser_benchmark.rs
docs/: MONGODB.md  USAGE.md
docs/plans/: 2026-02-04-md2db-api-implementation.md  2026-02-05-md2db-parallel-mongodb-design.md  2026-02-05-md2db-parallel-mongodb-implementation.md  2026-02-05-md2db-rust-rewrite-design.md
examples/: sample_exam.md
src/: api.rs  classifier.rs  database.rs  lib.rs  main.rs  media.rs  models.rs  parser.rs  processor.rs  zip.rs
src/md2db/: api.py  database.py  image_processor.py  main.py  models.py  parser.py
tests/: README_PERFORMANCE_TESTS.md  api_integration_test.rs  benchmark_comparison.py  generate_performance_charts.py  performance_analysis.py  performance_summary.py  test_api.py  test_basic_functionality.py  test_cli.py  test_cli_parallel.py  test_database.py  test_examples.py  test_image_integration.py  test_image_processor.py  test_integration.py  test_integration_old.py  test_latex_edge_cases.py  test_models.py  test_multiple_questions.py  test_multiple_questions_latex_integration.py  test_options_parsing.py  test_parser.py  test_project_structure.py  test_question_detection.py
tests/mongodb/: test_deduplicator.py  test_models.py  test_writer.py
tests/parallel/: test_chunker.py  (+2 more)
(+8 files in other folders)
