[package]
name = "md2db"
version = "0.1.0"
edition = "2021"
description = "Markdown to Database converter - High performance Rust implementation"
authors = ["MD2DB Contributors"]

[dependencies]
# Web framework
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1.35", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "compression-br", "compression-gzip"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "chrono", "uuid"], optional = true }
mongodb = { version = "2.8", optional = true }

# Markdown parsing
pulldown-cmark = { version = "0.11", default-features = false, features = ["html"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# UUID
uuid = { version = "1.6", features = ["v4", "serde"] }

# Hashing
sha2 = "0.10"

# Parallel processing
rayon = "1.8"

# File handling
tempfile = "3.8"
encoding_rs = "0.8"

# Async utilities
async-trait = "0.1"
futures = "0.3"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# ZIP processing (async)
async_zip = { version = "0.0.16", features = ["tokio"] }

[dev-dependencies]
criterion = "0.5"

[features]
default = ["postgres"]
postgres = ["sqlx"]
mongodb = ["dep:mongodb"]

[[bin]]
name = "md2db"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
